--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.gms:play-services-location:21.2.0'
     implementation 'com.google.firebase:firebase-database:20.3.1'
+    implementation 'androidx.activity:activity:1.8.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
