--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,11 +20,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgroGuru" >
+        android:theme="@style/Theme.AgroGuru">
+        <activity
+            android:name=".ViewDetails"
+            android:exported="false" />
+        <activity
+            android:name=".HarvestDetails"
+            android:exported="false" />
+        <activity
+            android:name=".Prediction"
+            android:exported="false" />
+        <activity
+            android:name=".Image"
+            android:exported="false" />
         <activity
             android:name=".ResultActivity"
-            android:label="Best Suited Crops"
             android:exported="false"
+            android:label="Best Suited Crops"
             android:theme="@style/Theme.AgroGuru" />
         <activity android:name=".ScrollingActivity" />
         <activity android:name=".Analysis" />
@@ -29,7 +49,7 @@
         <activity android:name=".Login" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
